tests/kulezi_tests/good/concat_3_strings.lat
int main() {
    printString("a" + "b" + "c");
    return 0;
}