tests/kulezi_tests/bad/invalid_op017.lat
void f() {}
void g() {}

int main() {
    f + g;

    return 0;
}